<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:tag="setting"
    tools:context=".setting.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitleSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange_500"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/setting_title"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <ScrollView
            android:id="@+id/scrollViewSetting"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnConnect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/setting_connection"
                    android:backgroundTint="@color/orange_200"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnFileManage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/setting_filemanage"
                    android:backgroundTint="@color/orange_200"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnGPS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/setting_GPS"
                    android:backgroundTint="@color/orange_200"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/setting_status"
                    android:backgroundTint="@color/orange_200"
                    android:textSize="20sp" />

<!--                <Button-->
<!--                    android:id="@+id/btnConfigAlarm"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:padding="10dp"-->
<!--                    android:text="@string/setting_config_alarm"-->
<!--                    android:textSize="20sp" />-->
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>