<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:tag="add_user"
    tools:context=".setting.connection.ConnectFragment">

    <TextView
        android:id="@+id/textTitleConnet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange_500"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/setting_connection"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_weight="1"
                        android:hint="기기명을 입력하세요"
                        android:inputType="textPersonName"
                        tools:ignore="TouchTargetSizeCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_ddns"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextDNS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_weight="1"
                        android:hint="DDNS 주소를 입력하세요."
                        android:inputType="textPostalAddress"
                        tools:ignore="TouchTargetSizeCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewPiID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pi_id"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextPiID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="라즈베리파이 ID"
                        android:inputType="textPersonName" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewPiPW"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pi_pw"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextPiPW"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="라즈베리파이 PW"
                        android:inputType="textPassword" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@color/orange_500">

                    <TextView
                        android:id="@+id/textViewSshPort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pi_sh_port"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextSshPort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="라즈베리파이 SSH port"
                        android:inputType="textPersonName" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewStreamID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stream_id"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextStreamID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Motion Stream ID"
                        android:inputType="textPersonName" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewStreamPW"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stream_pw"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextStreamPW"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Motion Stream PW"
                        android:inputType="textPassword" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewStreamPort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stream_port"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextStreamPort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Motion Stream Port"
                        android:inputType="textPersonName" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewWebDAVID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/webdav_id"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextWebDAVID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="WebDAV ID"
                        android:inputType="textPersonName" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewWebDAVPW"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/webdav_pw"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextWebDAVPW"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="WebDAV PW"
                        android:inputType="textPassword" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewWebDAVIDPort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/webdav_port"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextWebDAVIDPort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="WebDAV Port"
                        android:inputType="textPersonName" />

                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/addUserBottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/orange_200"
        app:itemBackground="@color/orange_200"
        app:itemIconTint="@drawable/bottom_icon_color"
        app:itemTextColor="@drawable/bottom_icon_color"
        app:menu="@menu/adduserbottommenu"
        tools:targetApi="n_mr1" />

</LinearLayout>